[tool.poetry]
name = "polog-logger"
version = "0.1.1"
description = ""
authors = ["a96lex <a96lex@gmail.com>"]
readme = "README.md"
packages = [{include = "polog_logger"}]

[tool.poetry.dependencies]
python = "^3.8"
polog = "^0.0.17"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
